@@ -18,7 +18,7 @@ Philipp "philsmd" Schmidt <philsmd@hashcat.net> (@philsmd)
 
 Gabriele "matrix" Gristina <matrix@hashcat.net> (@gm4tr1x)
 
-* gzip wordlists feature
+* Compressed wordlists feature (gzip/zip)
 * SHA-224 kernel module + optimizations
 * Some AES OpenCL kernel module optimizations
 * OpenCL Info feature
